manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: new-calypso-ingress
spec:
  rules:
  - host: INGRESS_URL
    http:
      paths:
      - backend:
          serviceName: calypso
          servicePort: 80
        path: /
